@@ -1,6 +1,7 @@
 git-annex (5.20140718) UNRELEASED; urgency=medium
 
-  * New chunk= option to chunk files stored in directory remotes.
+  * New chunk= option to chunk files stored in special remotes.
+    Currently supported by: directory, and all external special remotes.
   * Partially transferred files are automatically resumed when using
     chunked remotes!
   * The old chunksize= option is deprecated. Do not use for new remotes.
